# verse-card-generator

./: README.md  pyproject.toml
src/vcg/: __main__.py  app.py  bible.py  model.py  refs.py  render.py
src/vcg/static/: style.css
src/vcg/templates/: base.html  index.html
src/vcg/templates/partials/: card_edit_title.html  full_card.html  preview-config-form.html  preview-window.html  verse_text.html  verse_text_edit.html  view_global_options.html
